<resources>
    <string name="app_name">P04_Team4</string>
    <string-array name="view_modes">
        <item>Month</item>
        <item>Week</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="time_group_options">
        <item>By Input</item>
        <item>Sort by Week</item>
        <item>Sort by Day of Week</item>
        <item>Sort by Month</item>
    </string-array>
    <string name="spinner_prompt">Select an option</string>
    <string name="send_sticker">Send Sticker</string>
    <string name="theme_preview">Settings</string>
    <string name="sticker_image">Sticker Image</string>
    <string name="back_button">Sticker Image</string>
    <string name="failed_to_create_account">Failed to create account</string>
    <string name="failed_to_update_profile">Failed to update profile</string>
    <string name="Name_of_User">Name of User</string>
    <string name="Account">Account</string>
    <string name="Change_Password">Change Password</string>
    <string name="Account_Information">Account Information</string>
    <string name="content_display">Content and Display</string>
    <string name="Layout">Layout</string>
    <string name="support_about">Support and About</string>
    <string name="report_problem">Report a problem</string>
    <string name="logout" translatable="false">LOG OUT OF ACCOUNT</string>
    <string name="Chart_Title">Chart Title</string>
    <string name="Other_Action">Other Action</string>
    <string name="New_Button">New Button</string>
    <string name="Add_Data">Add Data</string>
    <string name="Chat_Name">Chat Name</string>
    <string name="Chat_Message">Chat Message</string>
    <string name="Chat_Time">Chat Time</string>
    <string name="Your_Chats">Your Chats</string>
    <string name="Add_Chat">Add Chat</string>
    <string name="last_seen_6_minutes_ago">last seen 6 minutes ago</string>
    <string name="Type_a_message">Type a message</string>
    <string name="Send">Send</string>
    <string name="Create_new_Habit">Create new Habit</string>
    <string name="Habit_Name">Habit Name</string>
    <string name="Habit_Description">Habit Description</string>
    <string name="unit_of_measure">Unit of Measure (Pushups, Minutes etc.)</string>
    <string name="Daily_log_in_reward">Daily log-in Reward</string>
    <string name="login_daily_to">Log in daily to earn FriendCoins!</string>
    <string name="Point_reward">Point reward</string>
    <string name="FriendCoins">+20 FriendCoins</string>
    <string name="Day_1">Day 1</string>
    <string name="Day_2">Day 2</string>
    <string name="Day_3">Day 3</string>
    <string name="Day_4">Day 4</string>
    <string name="Day_5">Day 5</string>
    <string name="Day_6">Day 6</string>
    <string name="Day_7">Day 7</string>
    <string name="claim_today">Claim today\'s reward!</string>
    <string name="Number_of_Pushups">Number of Pushups</string>
    <string name="Save">Save</string>
    <string name="Send_in_Feedback">Send in Feedback</string>
    <string name="Send_Feedback">Send Feedback</string>
    <string name="enter_feedback">Enter your feedback here</string>
    <string name="Friendship_Events">Friendship Events</string>
    <string name="Button">Button</string>
    <string name="Average">Average</string>
    <string name="Min">Min</string>
    <string name="Max">Max</string>
    <string name="Duration">Duration</string>
    <string name="Date_Started">Date Started</string>
    <string name="Last_Date_Entered">Last Date Entered</string>
    <string name="habit_not_set">Habit not set\nClick to set!</string>
    <string name="Home">Home</string>
    <string name="Friends">Friends</string>
    <string name="Small_Button">Small Button</string>
    <string name="Timer">Timer</string>
    <string name="stopwatch_purpose">Purpose of Timer?</string>
    <string name="timer_instructions">Enter the time in the form of HH:MM:SS</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>
    <string name="Timer_History">Timer History</string>
    <string name="create_challenge">Create challenge here!</string>
    <string name="Enter">Enter</string>
    <string name="Delete_All">Delete All</string>
    <string name="todo_list">To-Do List</string>
    <string name="Add">Add</string>
    <string name="Enter_Items">Enter Items</string>
    <string name="Create_New_Account">Create New Account</string>
    <string name="register">Already Registered?</string>
    <string name="Login">Login</string>
    <string name="Full_Name">Full Name</string>
    <string name="Password">Password</string>
    <string name="agree_to_toc">By continuing, you agree to our Term and Conditions and Privacy Policy.</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Date">Date</string>
    <string name="Purpose">Purpose</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="Create_New_Password">Create New Password</string>
    <string name="Confirm_Your_Password">Confirm Your Password</string>
    <string name="Change">Change</string>
    <string name="enter_phone_no">Enter Phone Number :</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="welcome">Welcome!</string>
    <string name="Log_Out">Log Out</string>
    <string name="Chats">Chats</string>
    <string name="Fitness">Fitness</string>
    <string name="Notepad">Notepad</string>
    <string name="Calendar">Calendar</string>
    <string name="Habits">Habits</string>
    <string name="Reward">Rewards</string>
    <string name="Feedback">Feedback</string>
    <string name="Settings">Settings</string>
    <string name="Last_Message">Last Message</string>
    <string name="Time">Time</string>
    <string name="Feature_Name">Feature Name</string>
    <string name="Sample_message">Sample message</string>
    <string name="sign_in_to_cont">Please sign in to continue.</string>
    <string name="Forgot_Password_q">Forgot Password?</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="OTP">OTP</string>
    <string name="enter_code">Please enter the code that we have sent to you.</string>
    <string name="Verify">Verify</string>
    <string name="didnt_receive_otp">Didn\'t receive OTP?</string>
    <string name="Resend">Resend</string>
    <string name="Your_Screen_Time">Your Screen Time</string>
    <string name="yest_screentime">Yesterday\'s Screen Time</string>
    <string name="today_screentime">Today\'s Screen Time</string>
    <string name="Save_Habit">Save Habit</string>
    <string name="Shop">Shop</string>
    <string name="Stickers">Stickers</string>
    <string name="Cat_Pack">Cat Pack</string>
    <string name="Monkey_Pack">Monkey Pack</string>
    <string name="Emoji_Pack">Emoji Pack</string>
    <string name="Beast_Pack">Beast Pack</string>
    <string name="Skibidi_Pack">Skibidi Pack</string>
    <string name="DBD_Pack">DBD Pack</string>
    <string name="Background_Themes">Background Themes</string>
    <string name="Fluid_Harmony">Fluid Harmony</string>
    <string name="Blue_Blossom">Blue Blossom</string>
    <string name="Playful_Safari">Playful Safari</string>
    <string name="Banner">Banner</string>
    <string name="Coming_Soon">Coming Soon!</string>
    <string name="Sticker_Pack">Sticker Pack</string>
    <string name="Buy">Buy</string>
    <string name="Cat_Sticker_Pack">Cat Sticker Pack</string>
    <string name="Monkey_Sticker_Pack">Monkey Sticker Pack</string>
    <string name="Emoji_Sticker_Pack">Emoji Sticker Pack</string>
    <string name="Alpha_Wolf_Sticker_Pack">Alpha Wolf Sticker Pack</string>
    <string name="Skibidi_Toilet_Sticker_Pack">Skibidi Toilet Sticker Pack</string>
    <string name="Dead_by_Daylight_Sticker_Pack">Dead by Daylight Sticker Pack</string>
    <string name="Language">Language</string>
    <string name="Name">Name</string>
    <string name="name_Bracket">(Name)</string>
    <string name="phone_number_bracket">(Number)</string>
    <string name="Email_Address">Email Address</string>
    <string name="email_address_bracket">(Email Address)</string>
    <string name="Follow_Request">Follow Requests</string>
    <string name="Enter_Event_Title">Enter Event Title</string>
    <string name="Start_Time">Start Time</string>
    <string name="End_Time">End Time</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="Selected_Date">Selected Date</string>
    <string name="Enter_Event">Enter Event</string>
    <string name="All_Day">All Day</string>
    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="View_All_Events">View All Events</string>
    <string name="Today_Events">Today\'s Events</string>
    <string name="Create_Account">Create Account</string>
    <string name="please_enter_code">Please enter the code that we have sent to you.</string>
    <string name="did_nt_receive_otp">Didn\'t receive OTP?</string>
    <string name="enter_Phone_Number">Enter Phone Number: </string>
    <string name="create_new_password">Create New Password</string>
    <string name="Birthday">Birthday</string>
    <string name="birthday_bracket">(Birthday)</string>
    <string name="Friend_List">Friend List</string>
    <string name="Friend_Requests">Friend Requests</string>
    <string name="Today_date">Today\'s Date</string>
    <string name="Customise">Customise</string>
    <string name="Screentime">Screentime</string>
    <string name="invite_id">Invite ID: (name)</string>
    <string name="feedback_sent">Feedback Sent</string>
    <string name="successful_feedback">Your feedback has been sent successfully.\nThank you!</string>
    <string name="unsuccessful_feedback">Failed to send feedback</string>
    <string name="enter_ffeedback">Please enter feedback</string>
    <string name="feedback_instructions">This is the feedback feature where you can send us your feedback!\n\n
    1. Enter your feedback: Type your feedback in the textbox provided.\n
    2. Send your feedback: When you\'re done, tap the "Send Feedback" button to send it to us!\n
    3. Confirmation: If your feedback is successfully sent, you will see a pop-up stating "Feedback Sent", along
    with a message indicating a successful feedback submission.\n\n
    Thank you for your feedbacks! We will receive them within 1-2 working days.\n
    If you have any questions. please contact support.\n</string>
    <string name="Help">Help</string>
    <string name="timer_iinstructions">This is the timer feature where you can set and manage timers.\n\n
                1. Set Alarm: Choose from the 3 pre-set timings or enter your own timing in HH:MM:SS format.\n
                2. Set Alarm Purpose: Enter the purpose of your alarm.\n
                3. Start Timer: Start,  pause, resume and stop your timer anytime.\n
                4. Timer History: Go to Timer History to view all your previous timers.\n\n
                If you have any questions, please contact support.</string>
    <string name="enter_time">Please enter time in HH:MM:SS format</string>
    <string name="enter_purpose">Please enter a purpose</string>
    <string name="timer_running">Timer Running…</string>
    <string name="timer_running2">Your timer is running.</string>
    <string name="time_left">Time left: </string>
    <string name="timer_finished">Timer Finished!</string>
    <string name="timer_finished2">Your timer is finished!</string>
    <string name="unsuccessful_log">Failed to log timer data.</string>
    <string name="set_timer_first">Set the timer first!</string>
    <string name="clear_all_timer">Clear All Timer History</string>
</resources>